@@ -76,7 +76,7 @@ cocos2d for iPhone authors for v1.1
 
 Lead Developers:
 	Marco Tillemans (http://www.welcometothefabrik.com/)
-	Ricardo Quesada (http://www.zynga.com)
+	Ricardo Quesada (http://www.cocos2d-iphone.org/)
 
 
 Contributors (alphabetically ordered):
