@@ -283,4 +283,8 @@
 {}
 @end
 
+@interface SpriteBatchBug1217 : SpriteDemo
+{}
+@end
+
 
